--- a/bin/AspNetMvc5.dll.config
+++ b/bin/AspNetMvc5.dll.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AspNetMvc5Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AspNetMvc5Context-20181026104038; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AspNetMvc5Context-20181026104038.mdf" providerName="System.Data.SqlClient" />
+    <!--add name="AspNetMvc5Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AspNetMvc5Context-20181026104038; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AspNetMvc5Context-20181026104038.mdf" providerName="System.Data.SqlClient" /-->
+    <add name="AspNetMvc5Context" connectionString="Data Source=10.100.0.43; Initial Catalog=AspNetMvc5; User Id=sa; Password=ansidev2016@!#; Integrated Security=false;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,7 +21,7 @@
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
+D:\JR\AspNetMvc5\AspNetMvc5\Web.config
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
         <httpRuntime targetFramework="4.5" />
